# reminder-manager

./: README.md  index.ts  justfile  package.json  pyproject.toml
src/: skill-cache.ts
src/skill_suggester/: __init__.py  cli.py  core.py
tests/: skill-reminder.test.ts  test_core.py
tests/fixtures/skills/AST_SKILL_TOKEN_Q7X/: SKILL.md
tests/fixtures/skills/JUST_SKILL_TOKEN_Q7X/: SKILL.md
tests/fixtures/skills/LATEX_SKILL_TOKEN_Q7X/: SKILL.md
tests/fixtures/skills/ZOTERO_SKILL_TOKEN_Q7X/: SKILL.md
