[project]
name = "skill-suggester"
version = "0.1.0"
description = "Suggest relevant skills for a prompt"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.10.0",
    "pydantic>=2.12.0",
]

[project.scripts]
skill-suggester = "skill_suggester.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=8.4.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_suggester"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
